Ask-izzy 356 fix share button aligment and it appears on small size the share button

--- a/src/components/ResultListItem.scss
+++ b/src/components/ResultListItem.scss
@@ -36,7 +36,9 @@
             column-gap: 6px;
 
             .ShareButton {
-                line-height: 23px;
+                display: flex;
+                line-height: 20px;
+                vertical-align: middle;
             }
         }
     }
